--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <img class="w3-image" src="https://www.abc.net.au/news/image/7214502-3x2-940x627.jpg" alt="Me" width="1500" height="600">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">Terry Habib</h1>
-    <h5 class="w3-hide-large" style="white-space:nowrap"></h5>
+    <h5 class="w3-hide-large" style="white-space:nowrap">Terry Habib / HR Consultant</h5>
     <h3 class="w3-hide-medium w3-hide-small">HR Professional Consultant</h3>
   </div>
   
