--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Senor Associate</b></h5>
+          <h5 class="w3-opacity"><b>Senior Associate</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2015 - Current</h6>
           <p>Providing specialist Career Transition Support to employees, and delivering Redundancy Notification training to Managers on how to have those conversations compassionately whilst minimizing risk to the business.</p>
           <hr>
